--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Nav Bar -->
 
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">Tindog</a>
+        <a class="navbar-brand" href="">tindog</a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -57,10 +57,10 @@
     <div class="col-lg-6" >
       <h1>Meet new and interesting dogs nearby.</h1>
       <button type="button" class = "btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-      <button type="button" class = "btn btn-outline-light btn-lg"><i class="fab fa-500px"></i> Download</button>
+      <button type="button" class = "btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
     </div>
     <div class="col-lg-6">
-      <img src="images/iphone6.png" alt="iphone-mockup">
+      <img src="images/iphone6.png" class ="dog-image" alt="iphone-mockup">
     </div>
   </div>
   </div>
