--- a/index.html
+++ b/index.html
@@ -70,31 +70,31 @@
   <!-- Features -->
 
   <section id="features">
-   <div class="container container-features">
+   <!-- <div class="container container-features"> -->
 
 
     <div class="row">
 
     <div class="col-lg-4">
 
-     <i class="fas fa-check-circle features-button"></i>
+     <i class="fas fa-check-circle fa-4x features-button"></i>
      <h3>Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
     </div>
 
     <div class="col-lg-4 ">
-    <i class="fas fa-bullseye features-button"></i>
+    <i class="fas fa-bullseye fa-4x features-button"></i>
     <h3>Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
     </div>
 
     <div class="col-lg-4 ">
-    <i class="fas fa-heart features-button"></i>
+    <i class="fas fa-heart fa-4x features-button"></i>
     <h3>Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
     </div>
 </div>
-</div>
+<!-- </div> -->
   </section>
 
 
