--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <div class="row">
 
-      <div class="col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4 col-md-6">
 
 
 
@@ -170,7 +170,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4 col-md-6">
 
 
         <div class="card">
@@ -186,7 +186,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class=" pricing-column col-lg-4">
 
 
         <div class="card">
