--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
       <!-- Title -->
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-md-6 col-sm-6">
           <h1>Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-md-6 col-sm-6">
           <img src="images/iphone6.png" class="title-image" alt="iphone-mockup">
         </div>
       </div>
@@ -69,7 +69,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="features">
     <!-- <div class="container container-features"> -->
 
 
