--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6">
-          <img src="images/iphone6.png" class="title-image" alt="iphone-mockup">
+          <img class="title-image" src="images/iphone6.png"  alt="iphone-mockup">
         </div>
       </div>
     </div>
