--- a/index.html
+++ b/index.html
@@ -209,18 +209,24 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="footer">
+
+    <i class="footer-icons fab fa-twitter"></i>
+    <i class="footer-icons fab fa-facebook-square"></i>
+    <i class="footer-icons fab fa-instagram"></i>
+    <i class="footer-icons fas fa-envelope"></i>
+
 
     <p>© Copyright 2018 TinDog</p>
 
