--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -146,7 +146,7 @@
 
   <!-- Pricing -->
 
-  <section class="pricing">
+  <section id="pricing" class="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -209,7 +209,7 @@
 
   <!-- Call to Action -->
 
-  <section class="cta">
+  <section id="cta" class="cta">
 
     <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
@@ -220,7 +220,7 @@
 
   <!-- Footer -->
 
-  <footer class="footer">
+  <footer id="footer" class="footer">
 
     <i class="footer-icons fab fa-twitter"></i>
     <i class="footer-icons fab fa-facebook-square"></i>
