--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 
 <head>
   <meta charset="utf-8">
+  <meta property="og:url" content="https://jalexander01.github.io/TinDog-Start-master/" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="TinDog dating app for lonely dogs" />
+  <meta property="og:description" content="TinDog dating app for dogs. This website showcases in a simple way the author abilities to create and develop webpages using basic tools like Bootstrap, CSS, HTML." />
+  <meta property="og:image" content="https://jalexander01.github.io/TinDog-Start-master/images/iphone6.png" />
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <title>TinDog</title>
 
   <!-- <!google fonts link - this is a comment> -->
@@ -60,7 +67,7 @@
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6">
-          <img class="title-image" src="images/iphone6.png"  alt="iphone-mockup">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
